hphp/hack/test/typecheck/array/safe_vector_array/disallows_variadic_of_int_when_array_of_int_to_int_is_required.php.exp
File "disallows_variadic_of_int_when_array_of_int_to_int_is_required.php", line 6, characters 26-39:
Invalid argument (Typing[4110])
File "disallows_variadic_of_int_when_array_of_int_to_int_is_required.php", line 3, characters 33-37:
This is an array (used like a hashtable)
File "disallows_variadic_of_int_when_array_of_int_to_int_is_required.php", line 5, characters 22-35:
It is incompatible with a varray (variadic argument)
