hphp/hack/test/typecheck/array/safe_vector_array/disallows_variadic_of_int_when_array_of_int_to_int_is_required.php
<?hh // partial

function consumeArrayOfIntToInt(array<int, int> $_): void {}

function test(int ...$variadicOfInt): void {
  consumeArrayOfIntToInt($variadicOfInt);
}
